--- a/k8s/10-ingress-api.yaml
+++ b/k8s/10-ingress-api.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nlp-ingress
+  name: nlp-ingress-api
   namespace: nlp
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
@@ -9,22 +9,13 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: nlp.example.com
+    - host: 34.40.49.244.nip.io
       http:
         paths:
-          # API: /api/xxx -> /xxx
           - path: /api(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
               service:
                 name: nlp-back-svc
-                port:
-                  number: 80
-          # Front: tout le reste
-          - path: /(.*)
-            pathType: ImplementationSpecific
-            backend:
-              service:
-                name: nlp-front-svc
                 port:
                   number: 80
