--- a/k8s/02-secret.yaml
+++ b/k8s/02-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: nlp
 type: Opaque
 stringData:
-  GROQ_API_KEY: "groc_api_key"
+  GROQ_API_KEY: "api_key"
   POSTGRES_PASSWORD: "StrongPassword123!"
